# cloud-microservices

./: .cursorrules  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pytest.ini  requirements-dev.txt
.github/workflows/: ci.yml
docs/: architecture.md  runbook.md
monitoring/: __init__.py  log_aggregator.py  metrics_collector.py
orchestration/: __init__.py  health_check.py  orchestrator.py  recovery.py
services/api-gateway/: Dockerfile
services/api-gateway/app/: __init__.py  config.py  main.py
services/cpp-worker/: .clangd  CMakeLists.txt  Dockerfile
services/cpp-worker/src/: main.cpp  thread_pool.hpp
services/fault-injector/: Dockerfile  requirements.txt
services/fault-injector/app/: __init__.py  injector.py  main.py
services/service-a/: Dockerfile
services/service-a/app/: __init__.py  config.py  main.py  worker.py
services/service-b/: Dockerfile  requirements.txt
services/service-b/app/: __init__.py  main.py  storage.py
shared/: __init__.py  fastapi_app.py  logging_config.py  models.py  utils.py
tests/: conftest.py
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_health_check.py  test_log_aggregator.py  test_metrics_collector.py  test_models.py  test_recovery.py  test_utils.py
